--- a/calculate.html
+++ b/calculate.html
@@ -17,6 +17,7 @@
         <a href="historical.php">Historical</a>
         <a href="display.php">Current Patients</a>
         <a href="index.html">Logout</a>
+        <a href="graph.html">graph</a>
     </div>
     <div class="container w3-container w3-blue-grey">
         <form action="calculate.php">
@@ -38,23 +39,20 @@
                         <input type="radio" name="cardiovascular" value="Capillary Refill
                     <2 Sec, HR 110-160 and MAPs Stable"> Capillary Refill
                         <2 Sec, HR 110-160 and MAPs Stable<br>
-                            <input type="radio" name="cardiovascular" value="Capillary Refill
-                        <5 Sec"> Capillary Refill
-                            <5 Sec<br>
-                                <input type="radio" name="cardiovascular" value="HR > 160 for 1 Hr"> HR > 160 for 1 Hr
-                                <br>
-                                <input type="radio" name="cardiovascular" value="Mean Arterial Pressure(MAP)
+                            <input type="radio" name="cardiovascular" value="HR > 160 for 1 Hr"> HR > 160 for 1 Hr
+                            <br>
+                            <input type="radio" name="cardiovascular" value="Mean Arterial Pressure(MAP)
                             <10% From Prior 24 Hrs"> Mean Arterial Pressure(MAP)
-                                <10% From Prior 24 Hrs<br>
-                                    <input type="radio" name="cardiovascular" value="Capillary Refill >5 Sec"> Capillary Refill >5 Sec
-                                    <br>
-                                    <input type="radio" name="cardiovascular" value="HR > 160 for 2 Hrs"> HR > 160 for 2 Hrs
-                                    <br>
-                                    <input type="radio" name="cardiovascular" value=" HR
+                            <10% From Prior 24 Hrs<br>
+                                <input type="radio" name="cardiovascular" value="Capillary Refill >5 Sec"> Capillary Refill >5 Sec
+                                <br>
+                                <input type="radio" name="cardiovascular" value="HR > 160 for 2 Hrs"> HR > 160 for 2 Hrs
+                                <br>
+                                <input type="radio" name="cardiovascular" value=" HR
                                 <100"> Episode HR
-                                    <100<br>
-                                        <input type="radio" name="cardiovascular" value="MAP Unstable"> MAP Unstable Requiring Pressors
-                                        <br>
+                                <100<br>
+                                    <input type="radio" name="cardiovascular" value="MAP Unstable"> MAP Unstable Requiring Pressors
+                                    <br>
 
                 </div>
                 <div class="w3-card w3-blue w3-padding w3-margin-top">
@@ -106,7 +104,7 @@
                         <br>
                         <input type="radio" name="feeds" value="Tolerating Bolus"> Tolerating Bolus, No Residuals, No Emesis
                         <br>
-                        <input type="radio" name="feeds" value=" Emesis/Residuals >10%"> Emesis/Residuals >10% Volume, Partially Digested
+                        <input type="radio" name="feeds" value="Emesis/Residuals >10%"> Emesis/Residuals >10% Volume, Partially Digested
                         <br>
                         <input type="radio" name="feeds" value="Emesis/Residuals >20%"> Emesis/Residuals >20% Volume
                         <br>
